--- a/tsconfig.paths.json
+++ b/tsconfig.paths.json
@@ -2,13 +2,13 @@
   "compilerOptions": {
     "baseUrl": ".",
     "paths": {
-      "@src/*": ["src/*"],
-      "@api/*": ["src/api/*"],
-      "@components/*": ["src/components/*"],
-      "@pages/*": ["src/pages/*"],
-      "@shared/*": ["src/shared/*"],
-      "@state/*": ["src/shared/state/*"],
-      "@utils/*": ["src/shared/utils/*"]
+      "@src/*": ["./src/*"],
+      "@api/*": ["./src/api/*"],
+      "@components/*": ["./src/components/*"],
+      "@pages/*": ["./src/pages/*"],
+      "@shared/*": ["./src/shared/*"],
+      "@state/*": ["./src/shared/state/*"],
+      "@utils/*": ["./src/shared/utils/*"]
     }
   }
 }
