--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "WeatherDemoApp",
+  "name": "weather-demo-app",
   "version": "1.0.0",
   "private": true,
   "dependencies": {
@@ -16,11 +16,10 @@
     "redux-saga": "^1.1.3"
   },
   "scripts": {
-    "start": "craco start",
-    "build": "craco build",
-    "test": "craco test",
-    "eject": "craco eject",
-    "lint": "eslint . --ext .ts,.tsx"
+    "start": "react-scripts start",
+    "build": "react-scripts build",
+    "test": "react-scripts test",
+    "eject": "react-scripts eject"
   },
   "eslintConfig": {
     "extends": [
